model training. (See {ml-pull}1034[#1034].)

=== Bug Fixes

* Use largest ordered subset of categorization tokens for category reverse search regex.
(See {ml-pull}970[#970], issue: {ml-issue}949[#949].)
* Account for the data frame's memory when estimating the peak memory used by classification
and regression model training. (See {ml-pull}996[#996].)

== {es} version 7.6.2

=== Bug Fixes

* Fix a bug in the calculation of the minimum loss leaf values for classification.
(See {ml-pull}1032[#1032].)

== {es} version 7.6.0

=== New Features

* Add feature importance values to classification and regression results (using tree
SHapley Additive exPlanation, or SHAP). (See {ml-pull}857[#857].)

=== Enhancements

* Improve performance of boosted tree training for both classification and regression.
(See {ml-pull}775[#775].)
* Reduce the peak memory used by boosted tree training and fix an overcounting bug
estimating maximum memory usage. (See {ml-pull}781[#781].)
* Stratified fractional cross validation for regression. (See {ml-pull}784[#784].)
* Added `geo_point` supported output for `lat_long` function records. (See {ml-pull}809[#809]
and {pull}47050[#47050].)
* Use a random bag of the data to compute the loss function derivatives for each new
tree which is trained for both regression and classification. (See {ml-pull}811[#811].)
* Emit `prediction_probability` field alongside prediction field in ml results.
(See {ml-pull}818[#818].)
* Reduce memory usage of {ml} native processes on Windows. (See {ml-pull}844[#844].)
* Reduce runtime of classification and regression. (See {ml-pull}863[#863].)
* Stop early training a classification and regression forest when the validation error
is no longer decreasing. (See {ml-pull}875[#875].)
* Emit `prediction_field_name` in ml results using the type provided as
`prediction_field_type` parameter. (See {ml-pull}877[#877].)
* Improve performance updating quantile estimates. (See {ml-pull}881[#881].)